# Queuing-Project

./: .gitignore  .gitmodules  .~lock.Defence Poster.pptx#  Cargo.toml  DOCUMENTATION_FOR_BankQueueApp.docx  Defence Poster.pptx  LICENSE  README.md
DB Gen Scripts/: clients.csv  create.py  csv_search.py  main.py  namelist.py  names.txt  password.txt  script.py  servers.csv  transactions.csv
Doc Diagrams/: .$Conceptual.drawio.bkp  .~lock.test_cases.docx#  Conceptual.drawio  class.puml  component.puml  sequence.puml  server.puml  test_cases.docx  test_dd.md  usecase.puml
Doc Diagrams/activity/: customer.puml  manager.puml  teller.puml
auth/: .env  Cargo.toml
auth/migrations/2023-05-30-004133_users/: down.sql  up.sql
auth/src/: lib.rs  main.rs  models.rs  schema.rs  test.rs
backend/: .env  Cargo.toml  Main Queue.session.sql  README.md  cert.pem  git-cp.bash  git-cp.sh  git_cp.ps1  key.pem  pdf_format.md  queue.sql
backend/migrations/2023-06-03-143129_create_users/: down.sql  up.sql
backend/migrations/2023-07-17-191038_bank_queue/: up.sql
backend/migrations/2023-07-21-192013_queue_database/: down.sql  up.sql
backend/src/: consts.rs  lib.rs  main.rs
backend/src/data/: analytics.rs  cancelled.rs  mod.rs  models.rs  schema.rs
backend/src/data/client/: db_models.rs  mod.rs  user_data.rs
backend/src/data/guest/: db_models.rs  mod.rs
backend/src/data/guests/: db_models.rs  mod.rs
backend/src/data/models/: mod.rs  teller.rs  transaction.rs  user.rs
backend/src/data/servers/: db_models.rs
backend/src/data/teller/: db_models.rs  mod.rs
backend/src/data/teller/sub_queue_models/: mod.rs  server_queue.rs  sub_queues.rs
backend/src/data/transaction/: db_models.rs
backend/src/data/user/: db_models.rs  mod.rs  user_data_query.rs  user_queue.rs
backend/src/data_source/: db_actions.rs  mod.rs  prediction_gen.rs  queuing_techniques.rs
backend/src/data_source/database/: mod.rs  teller.rs  transaction.rs  user.rs
backend/src/data_source/queuing/: applique.rs  main_queue.rs  mod.rs
backend/src/data_sources/: mod.rs
backend/src/data_sources/database/: cancelled.rs  mod.rs
backend/src/data_sources/database/guests/: auth.rs  mod.rs
backend/src/data_sources/database/queue/: db_actions.rs  mod.rs
backend/src/data_sources/database/tellers/: auth.rs  finder.rs  mod.rs
backend/src/data_sources/database/transactions/: activities.rs  activity.rs  finder.rs  mod.rs
backend/src/data_sources/database/users/: auth.rs  finder.rs  mod.rs
backend/src/data_sources/queue/: main_queue_logic.rs  mod.rs  queue_deps.rs  sub_queue_logic.rs
backend/src/data_sources/queue/analytics/: data_acquision.rs  mod.rs
backend/src/data_sources/queue/main_queue/: calc.rs  logic.rs  mod.rs
backend/src/data_sources/queue/sub_queue/: clients.rs  mod.rs  servers.rs
backend/src/data_sources/random_forest/: mod.rs  pred.rs
backend/src/interface/: mod.rs  teller_interface.rs  user_interface.rs
backend/src/interface/analytics/: actions.rs  cancelled_actions.rs  mod.rs
backend/src/interface/sse/: broadcaster.rs
backend/src/interface/teller/: activities.rs  mod.rs  server_event.rs  teller_interface.rs  teller_queue.rs
backend/src/interface/teller/actions/: mod.rs
backend/src/interface/teller/auth/: mod.rs
backend/src/interface/teller/deletables/: mod.rs
backend/src/interface/teller/sse/: mod.rs
backend/src/interface/user/: activities.rs  client_event.rs  cors.rs  deletable.rs  mod.rs  models.rs  user_interface.rs
backend/src/interface/user/actions/: mod.rs
backend/src/interface/user/auth/: mod.rs
backend/src/interface/user/sse/: mod.rs
backend/src/test/: mod.rs
backend/src/tests/: authentication_test.rs  mod.rs
enquiries_server/: Cargo.toml
enquiries_server/src/: main.rs
enquiries_server/src/core/: env.rs  mod.rs
enquiries_server/src/domain/: mod.rs  repo_interface.rs
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/component/: CustomerPage.css  CustomerPage.js  Cvalidation.js  Guestlogin.css  Login.css  (+7 more)
interfaces/client_interface/: package-lock.json  package.json
migrations/2023-06-03-143129_create_users/: down.sql
queuing_server/: .env  Cargo.toml
queuing_server/migrations/2023-05-24-153730_queue_analysis/: up.sql
queuing_server/migrations/2023-06-03-143129_create_users/: down.sql  up.sql
queuing_server/migrations/2023-06-03-143142_service_times/: down.sql  up.sql
queuing_server/src/: lib.rs  main.rs
queuing_server/src/core/: constants.rs
queuing_server/src/data/: mod.rs  models.rs  schema.rs
queuing_server/src/data_source/: db_actions.rs  mod.rs  prediction_gen.rs  queuing_techniques.rs
queuing_server/src/data_sources/: local_source.rs  mod.rs  remote_source.rs  repo_impl.rs
queuing_server/src/data_sources/classifier/: mod.rs
queuing_server/src/domain/: entities.rs  mod.rs  repo_interface.rs
queuing_server/src/presentation/: mod.rs  routes.rs
queuing_sol/: Cargo.toml
queuing_sol/src/: main.rs
src/: main.rs
src/data/: mod.rs  models.rs
src/data_source/: mod.rs  queuing_techniques.rs
src/features/: mod.rs
(+20 files in other folders)
