[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = [ "mysql", "mysql_backend", "returning_clauses_for_sqlite_3_35"] }
actix-web = { version = "4.3.1" }
serde = { version = "1.0.163", features = ["derive"] }
dotenvy = "^0.15"
