[package]
name = "new_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1" }
actix-cors = { version = "0.6.4" }
actix-web-lab = "0.19.1"
env_logger = "0.10.0"
log = "0.4.18"
dotenvy = "0.15.7"
diesel = { version = "2.1.0", features = [
    "mysql",
    "mysql_backend",
    "chrono",
    "serde_json",
] }
randomforest = "0.1.6"
serde = { version = "1.0.163", features = ["derive"] }
actix = "0.13.0"
chrono = { version = "0.4.26", features = ["serde"] }
parking_lot = "0.12.1"
futures-util = "0.3.28"
bytestring = { version = "1.3.0", features = ["serde"] }
tokio = { version = "1.29.1", features = ["full"] }

