[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = { version = "4.3.1", features = ["openssl"] }
actix-web-lab = "0.19.1"
async-std = "1.12.0"
bytestring = { version = "1.3.0", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
crossbeam = "0.8.2"
openssl = { version = "0.10", features = ["v110"] }
diesel = { version = "2.1.0", features = [
    "mysql",
    "mysql_backend",
    "chrono",
    "serde_json",
] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures-util = { version = "0.3.28", features = ["async-await"] }
log = "0.4.19"
parking_lot = { version = "0.12.1", features = ["serde", "send_guard"] }
randomforest = "0.1.6"
serde = { version = "1.0.174", features = ["derive", "rc"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["serde", "serde_json", "json"] }
genpdf = "0.2.0"
