[package]
name = "bank-queue-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
actix-web = { version = "4.3.1", features = ["openssl", "default"] }
chrono = { version = "0.4.23", features = ["std", "clock", "serde"] }
genpdf = "0.2.0"
image = "0.24.5"
log = { version = "0.4.17" }
simple_logger = "4.0.0"
randomforest = "0.1.6"
csv = "1.2.1"
diesel = {version = "2.0.4", features = ["mysql", "mysql_backend"]}
