[package]
name = "queuing_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1" }
dotenvy = "0.15.7"
diesel = { version = "2.1.0", features = ["mysql", "mysql_backend", "chrono"] }
randomforest = "0.1.6"
serde = { version = "1.0.163", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
